Split out terminal renderer from the common terminal class